<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:background="@drawable/bg_shadow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginStart="10dp"
    android:layout_marginRight="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp">

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp">

            <com.example.z1229.view.Rc.RCImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_home_social_woman" />

            <ImageView
                android:id="@+id/ic_home_social_gender"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@mipmap/ic_home_social_gender_woman" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10.0dip"
            android:layout_weight="1.0"
            android:orientation="vertical">

            <TextView
                android:id="@id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5.0dip"
                android:layout_marginRight="5.0dip"
                android:text="@string/username"
                android:textSize="15.0sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_home_social_attention"
            android:layout_width="70.0dip"
            android:layout_height="30.0dip"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/bg_shape_radius"
            android:gravity="center"
            android:text="@string/attention" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="5"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:text="@string/teststring"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <com.example.z1229.view.Rc.RCImageView
            android:id="@+id/home_soacial_img1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            app:clip_background="true"
            app:round_corner="10dp"
            android:src="@mipmap/test"/>
        <com.example.z1229.view.Rc.RCImageView
            android:id="@+id/home_soacial_img2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            app:clip_background="true"
            app:round_corner="10dp"
            android:src="@mipmap/test"/>
        <com.example.z1229.view.Rc.RCImageView
            android:id="@+id/home_soacial_img3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            app:clip_background="true"
            app:round_corner="10dp"
            android:src="@mipmap/test"/>
        <com.example.z1229.view.Rc.RCImageView
            android:id="@+id/home_soacial_img4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:clip_background="true"
            app:round_corner="10dp"
            android:src="@mipmap/test"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/home_social_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textColor="#666666"
            android:text="@string/date"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.75">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/ic_home_social_huifu"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/huifu"
                android:gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:textColor="#666666"
                android:layout_marginStart="5dp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/ic_home_social_dianzan"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:textColor="#666666"
                android:text="@string/dianzan"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>