<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/home_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:paddingLeft="5dip"
        android:paddingRight="5dip">

        <com.example.z1229.view.CircleImageView
            android:layout_width="35dip"
            android:layout_height="35dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_app_round" />

        <LinearLayout
            android:id="@+id/line_search"
            android:layout_width="260.0dip"
            android:layout_height="28.0dip"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_corner"
            android:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5.0dip"
                android:src="@mipmap/ic_top_search"
                android:layout_marginStart="5.0dip" />

            <TextView
                android:id="@+id/tv_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dip"
                android:text="@string/searchtip"
                android:textColor="#d5d5d5"
                tools:ignore="InvalidId" />
        </LinearLayout>
        <com.example.z1229.view.CircleImageView
            android:layout_width="35dip"
            android:layout_height="35dip"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_top_xiaoxi"/>
    </RelativeLayout>
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:background="@drawable/bg_shadow"
                app:layout_scrollFlags="scroll|snap">
                <com.example.z1229.view.BannerView.BannerView
                    android:id="@+id/home_bannerview"
                    android:layout_width="match_parent"
                    android:layout_height="140dip"
                    android:layout_marginLeft="13dip"
                    android:layout_marginStart="13dip"
                    android:layout_marginRight="13dip"
                    android:layout_marginEnd="13dip"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="10dip"
                    app:bottomColor="#453e3e3e"
                    app:dotDistance="2dp"
                    app:dotGravity="right"
                    app:dotIndicatorFocus="#ff0000"
                    app:dotIndicatorNormal="#ffffff"
                    app:dotShape="circle"
                    app:dotSize="6dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="0dip"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:id="@+id/home_add_record"
                            android:layout_width="60dip"
                            android:layout_height="60dip"
                            android:background="@drawable/home_record_shape_corner">
                            <ImageView
                                android:layout_width="35dip"
                                android:layout_height="35dip"
                                android:layout_centerInParent="true"
                                android:src="@mipmap/ic_home_xuetang"/>

                        </RelativeLayout>


                        <TextView
                            android:text="@string/home_add_record"
                            android:gravity="center"
                            android:layout_marginTop="5dip"
                            android:textSize="15sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true"/>
                    </LinearLayout>

                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="0dip"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:id="@+id/home_GI_value"
                            android:layout_width="60dip"
                            android:layout_height="60dip"
                            android:background="@drawable/home_gi_shape_corner">
                            <ImageView
                                android:layout_width="35dip"
                                android:layout_height="35dip"
                                android:src="@mipmap/ic_home_gi"
                                android:layout_centerInParent="true"/>
                        </RelativeLayout>


                        <TextView
                            android:text="@string/home_GI_value"
                            android:gravity="center"
                            android:layout_marginTop="5dip"
                            android:textSize="15sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="0dip"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:id="@+id/home_science_diet"
                            android:layout_width="60dip"
                            android:layout_height="60dip"
                            android:background="@drawable/home_diet_shape_corner">
                            <ImageView
                                android:layout_width="35dip"
                                android:layout_height="35dip"
                                android:src="@mipmap/ic_home_diet"
                                android:layout_centerInParent="true"/>
                        </RelativeLayout>

                        <TextView
                            android:text="@string/home_science_diet"
                            android:gravity="center"
                            android:layout_marginTop="5dip"
                            android:textSize="15sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="0dip"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:id="@+id/home_wiki"
                            android:layout_width="60dip"
                            android:layout_height="60dip"
                            android:background="@drawable/home_wiki_shape_corner">
                            <ImageView
                                android:src="@mipmap/ic_home_wiki"
                                android:layout_width="35dip"
                                android:layout_height="35dip"
                                android:layout_centerInParent="true"/>
                        </RelativeLayout>

                        <TextView
                            android:text="@string/home_wiki"
                            android:gravity="center"
                            android:layout_marginTop="5dip"
                            android:textSize="15sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true" />
                    </LinearLayout>
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_title_social"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="#1C1C1C"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24.0dip"
                        android:layout_marginTop="20.0dip"
                        android:layout_marginBottom="14.0dip"
                        android:text="@string/plus"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="24.0dip" />

                    <TextView
                        android:id="@+id/home_social_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:drawableEnd="@drawable/ic_arrow_right_24dp"
                        android:drawablePadding="2.0dip"
                        android:drawableRight="@drawable/ic_arrow_right_24dp"
                        android:padding="5.0dip"
                        android:text="@string/more1"
                        android:textColor="#737373"
                        android:textSize="12.0sp"
                        android:gravity="center_vertical"/>
                </RelativeLayout>
            </LinearLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/home_social_recycle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F0F0F0"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>
